--- a/public/index.html
+++ b/public/index.html
@@ -317,10 +317,17 @@
             color: #e0e7ff;
             position: relative;
             transition: all 0.3s ease;
+            border-radius: 12px;
         }
         .menu button.active {
-            background: rgba(59, 130, 246, 0.2);
-            border-radius: 12px;
+            background: linear-gradient(135deg, #000000, #ffd700);
+            color: #ffffff;
+            animation: rotateBorder 2s linear infinite;
+        }
+        @keyframes rotateBorder {
+            0% { border: 2px solid #ffd700; }
+            50% { border: 2px solid #000000; }
+            100% { border: 2px solid #ffd700; }
         }
         .menu button::after {
             content: '';
@@ -328,7 +335,7 @@
             bottom: -2px;
             width: 0;
             height: 2px;
-            background: #3b82f6;
+            background: #ffd700;
             transition: width 0.3s ease;
         }
         .menu button:hover::after, .menu button.active::after {
@@ -644,13 +651,31 @@
         .receipt-content .download-btn:hover, .receipt-content .close-btn:hover {
             transform: translateY(-2px);
         }
+        .receipt-content .done-ui {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 20px;
+            padding: 10px;
+            background: #4ade80;
+            border-radius: 10px;
+            color: #fff;
+            font-weight: 600;
+            width: 100%;
+            text-align: center;
+        }
+        .receipt-content .done-ui img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
         .pdf-content {
             display: none;
         }
         @media (max-width: 480px) {
             body {
                 padding: 12px;
-                font-size: 14px;
+                font900px;
             }
             .container {
                 padding: 18px;
@@ -830,6 +855,7 @@
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey, { fetch: (...args) => fetch(...args) });
         const imgurClientId = '5befa9dd970c7d0';
+        const logoUrl = 'https://github.com/Opper125/opper-payment/raw/main/logo.png';
 
         let currentUser = { user_id: null, balance: 0, passport_status: 'pending', phone: null };
         let allowTransfers = true;
@@ -1031,7 +1057,7 @@
                     const item = document.createElement('div');
                     item.className = `history-item ${t.from_phone === currentUser.phone ? 'out' : 'in'}`;
                     item.innerHTML = `
-                        <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
+                        <img class="logo" src="${logoUrl}" alt="OPPER Logo">
                         ${t.from_phone === currentUser.phone ? '-' : '+'}${t.amount} Ks<br>
                         Phone: ${t.from_phone === currentUser.phone ? t.to_phone : t.from_phone}<br>
                         Note: ${t.note || 'None'}<br>
@@ -1061,20 +1087,28 @@
                     .single();
                 if (error) throw error;
 
+                const toUserId = transaction.to_phone === currentUser.phone 
+                    ? currentUser.user_id 
+                    : (await supabase.from('users').select('user_id').eq('phone', transaction.to_phone).single()).data.user_id;
+
                 const receiptContent = document.getElementById('receipt-content');
                 receiptContent.innerHTML = `
                     <div class="header">
-                        <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
+                        <img src="${logoUrl}" alt="OPPER Logo" style="width: 80px; height: 80px; margin-right: 20px;">
                         <h1>OPPER Payment</h1>
                     </div>
                     <p><strong>Transaction Receipt</strong></p>
                     <p><strong>Amount:</strong> ${transaction.amount} Ks</p>
                     <p><strong>From:</strong> ${transaction.from_phone}</p>
                     <p><strong>To:</strong> ${transaction.to_phone}</p>
-                    <p><strong>To ID:</strong> ${transaction.to_phone === currentUser.phone ? currentUser.user_id : (await supabase.from('users').select('user_id').eq('phone', transaction.to_phone).single()).data.user_id}</p>
+                    <p><strong>To ID:</strong> ${toUserId}</p>
                     <p><strong>Note:</strong> ${transaction.note || 'None'}</p>
                     <p><strong>Time:</strong> ${transaction.timestamp}</p>
                     <p><strong>Status:</strong> ${transaction.from_phone === currentUser.phone ? 'Sent' : 'Received'}</p>
+                    <div class="done-ui">
+                        <img src="${logoUrl}" alt="Done Icon">
+                        Transaction Completed
+                    </div>
                     <div class="footer">
                         Powered by OPPER Payment
                     </div>
@@ -1099,22 +1133,30 @@
                     .single();
                 if (error) throw error;
 
+                const toUserId = transaction.to_phone === currentUser.phone 
+                    ? currentUser.user_id 
+                    : (await supabase.from('users').select('user_id').eq('phone', transaction.to_phone).single()).data.user_id;
+
                 const pdfContent = document.getElementById('pdf-content');
                 pdfContent.innerHTML = `
-                    <div style="background: #fff; border-radius: 15px; padding: 30px; max-width: 600px; width: 100%; box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5); position: relative; overflow: hidden;">
-                        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1200 120" preserveAspectRatio="none"><path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0v27.35a600.21,600.21,0,0,0,321.39,29.09Z" fill="rgba(59,130,246,0.1)"/></svg>'); opacity: 0.1;"></div>
+                    <div style="background: #fff; border-radius: 15px; padding: 30px; max-width: 600px; width: 100%; box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5); position: relative; overflow: hidden; font-family: 'Poppins', sans-serif;">
+                        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('data:image/svg+xml;utf8,<svg viewBox=\\"0 0 1200 120\\" preserveAspectRatio=\\"none\\"><path d=\\"M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0v27.35a600.21,600.21,0,0,0,321.39,29.09Z\\" fill=\\"rgba(59,130,246,0.1)\\"/></svg>'); opacity: 0.1;"></div>
                         <div style="display: flex; align-items: center; margin-bottom: 20px; width: 100%; background: linear-gradient(135deg, #3b82f6, #60a5fa); padding: 15px; border-radius: 10px 10px 0 0;">
-                            <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo" style="width: 80px; height: 80px; margin-right: 20px;">
+                            <img src="${logoUrl}" alt="OPPER Logo" style="width: 80px; height: 80px; margin-right: 20px;">
                             <h1 style="font-size: 1.8rem; color: #fff; margin: 0; font-weight: 700;">OPPER Payment</h1>
                         </div>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>Transaction Receipt</strong></p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>Amount:</strong> ${transaction.amount} Ks</p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>From:</strong> ${transaction.from_phone}</p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>To:</strong> ${transaction.to_phone}</p>
-                        <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>To ID:</strong> ${transaction.to_phone === currentUser.phone ? currentUser.user_id : (await supabase.from('users').select('user_id').eq('phone', transaction.to_phone).single()).data.user_id}</p>
+                        <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>To ID:</strong> ${toUserId}</p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>Note:</strong> ${transaction.note || 'None'}</p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>Time:</strong> ${transaction.timestamp}</p>
                         <p style="font-size: 1rem; color: #1f2937; margin: 10px 0; line-height: 1.5;"><strong>Status:</strong> ${transaction.from_phone === currentUser.phone ? 'Sent' : 'Received'}</p>
+                        <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px; padding: 10px; background: #4ade80; border-radius: 10px; color: #fff; font-weight: 600; width: 100%; text-align: center;">
+                            <img src="${logoUrl}" alt="Done Icon" style="width: 30px; height: 30px; margin-right: 10px;">
+                            Transaction Completed
+                        </div>
                         <div style="text-align: center; margin-top: 20px; font-size: 0.9rem; color: #6b7280;">Powered by OPPER Payment</div>
                     </div>
                 `;
@@ -1123,7 +1165,17 @@
                     margin: 0.5,
                     filename: `Transaction_${transactionId}.pdf`,
                     image: { type: 'jpeg', quality: 0.98 },
-                    html2canvas: { scale: 2, useCORS: true },
+                    html2canvas: { 
+                        scale: 2, 
+                        useCORS: true,
+                        onclone: (clonedDoc) => {
+                            const images = clonedDoc.querySelectorAll('img');
+                            images.forEach(img => {
+                                img.crossOrigin = 'Anonymous';
+                                img.src = logoUrl;
+                            });
+                        }
+                    },
                     jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
                 };
                 await html2pdf().set(opt).from(pdfContent).save();
@@ -1332,7 +1384,7 @@
                 const successAnimation = document.createElement('div');
                 successAnimation.className = 'success-animation';
                 successAnimation.innerHTML = `
-                    <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
+                    <img src="${logoUrl}" alt="OPPER Logo">
                     Transfer Successful
                 `;
                 document.body.appendChild(successAnimation);
@@ -1343,7 +1395,7 @@
                     const receiptContent = document.getElementById('receipt-content');
                     receiptContent.innerHTML = `
                         <div class="header">
-                            <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
+                            <img src="${logoUrl}" alt="OPPER Logo" style="width: 80px; height: 80px; margin-right: 20px;">
                             <h1>OPPER Payment</h1>
                         </div>
                         <p><strong>Transaction Receipt</strong></p>
@@ -1354,6 +1406,10 @@
                         <p><strong>Note:</strong> ${note || 'None'}</p>
                         <p><strong>Time:</strong> ${now}</p>
                         <p><strong>Status:</strong> Sent</p>
+                        <div class="done-ui">
+                            <img src="${logoUrl}" alt="Done Icon">
+                            Transaction Completed
+                        </div>
                         <div class="footer">
                             Powered by OPPER Payment
                         </div>
