--- a/public/server.html
+++ b/public/server.html
@@ -555,6 +555,6 @@
     
     <!-- Supabase CDN -->
     <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    <script src="client.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
