--- a/public/index.html
+++ b/public/index.html
@@ -408,6 +408,6 @@
     
     <!-- Supabase CDN -->
     <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    <script src="admin.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
