--- a/public/index.html
+++ b/public/index.html
@@ -900,8 +900,8 @@ select {
         <!-- ဟေဒါ -->
         <header class="app-header">
             <div class="logo">
-                <img src="https://cdn-icons-png.flaticon.com/512/2089/2089778.png" alt="KPAY+ Logo">
-                <h1>KPAY+</h1>
+                <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="KPAY+ Logo">
+                <h1>OPPER+</h1>
             </div>
             <div class="user-info" id="userInfo">
                 <span id="userBalance">0.00 MMK</span>
@@ -1126,8 +1126,8 @@ select {
             <div class="overlay-content">
                 <div class="receipt-container" id="receiptContainer">
                     <div class="receipt-header">
-                        <img src="https://cdn-icons-png.flaticon.com/512/2089/2089778.png" alt="KPAY+ Logo">
-                        <h2>KPAY+</h2>
+                        <img src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER+ Logo">
+                        <h2>OPPER+</h2>
                     </div>
                     <div class="receipt-details">
                         <div class="receipt-row">
@@ -1164,7 +1164,7 @@ select {
                         </div>
                     </div>
                     <div class="receipt-footer">
-                        <p>KPAY+ မှ ကျေးဇူးတင်ရှိပါသည်</p>
+                        <p>OPPER+ မှ ကျေးဇူးတင်ရှိပါသည်</p>
                         <button class="btn btn-sm" id="downloadReceiptButton" onclick="downloadReceipt()">ပြေစာဒေါင်းလုဒ်လုပ်ရန်</button>
                     </div>
                 </div>
@@ -1288,15 +1288,15 @@ select {
         
         <!-- ဒေါင်းလုဒ် သတိပေးချက် -->
         <div class="download-bar" id="downloadBar">
-            <p>ပိုမိုကောင်းမွန်စွာအသုံးပြုရန် KPAY+ အက်ပ်ကို ဒေါင်းလုဒ်လုပ်ပါ။</p>
+            <p>ပိုမိုကောင်းမွန်စွာအသုံးပြုရန် OPPER+ အက်ပ်ကို ဒေါင်းလုဒ်လုပ်ပါ။</p>
             <button class="btn btn-sm" onclick="downloadApk()">ဒေါင်းလုဒ်</button>
             <button class="download-close" onclick="hideDownloadBar()">×</button>
         </div>
     </div>
     
     <script>
-const SUPABASE_URL = 'https://your-supabase-url.supabase.co';
-const SUPABASE_KEY = 'your-supabase-anon-key';
+const SUPABASE_URL = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
+const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
 let supabaseClient = null;
 let currentUser = null;
 let currentUserDetails = null;
@@ -2037,7 +2037,7 @@ function hideDownloadBar() {
 }
 
 function downloadApk() {
-    window.location.href = 'https://example.com/download/kpay.apk';
+    window.location.href = 'https://appsgeyser.io/18731061/OPPER-Payment';
 }
 
 function previewFile(inputId) {
