--- a/public/index.html
+++ b/public/index.html
@@ -388,7 +388,7 @@
             right: 12px;
             width: 32px;
             height: 32px;
-            background: url('https://cdn-icons-png.flaticon.com/512/32/32178.png') no-repeat center;
+            background: url('https://github.com/Opper125/opper-payment/blob/e184e0d3cf198b52a5c1ba3283f697aed42f7729/background.icon.png') no-repeat center;
             background-size: cover;
             border: none;
             cursor: pointer;
@@ -720,7 +720,7 @@
         .printer {
             width: 150px;
             height: 100px;
-            background: url('https://cdn-icons-png.flaticon.com/512/748/748113.png') no-repeat center;
+            background: url('https://github.com/Opper125/opper-payment/blob/e184e0d3cf198b52a5c1ba3283f697aed42f7729/background.icon.png') no-repeat center;
             background-size: contain;
             position: relative;
             animation: printerVibrate 0.1s ease-in-out infinite;
@@ -911,19 +911,19 @@
             <p id="mi-status" class="status pending">Passport Verification Required</p>
             <div id="passport-form" class="form-group">
                 <h3>Submit Passport Details</h3>
-                <label>Passport Number</label>
+                <label>Passport သို့ မှတ်ပုံတင် Number</label>
                 <input type="text" id="passport-number" placeholder="Enter Passport Number" required>
-                <label>Address</label>
+                <label>လိပ်စာ</label>
                 <input type="text" id="address" placeholder="Enter Address" required>
                 <label>Phone Number (09xxxxxxxxx)</label>
                 <input type="tel" id="phone" placeholder="09xxxxxxxxx" required>
-                <label>Payment PIN (6 digits)</label>
+                <label>ငွေပေးချေ PIN (6 လုံးအများဆုံး)</label>
                 <input type="password" id="payment-pin" maxlength="6" placeholder="Enter 6-digit PIN" required>
-                <label>Passport Image</label>
+                <label>Passport သို့ မှတ်ပုံတင် ပုံတင်ရန်</label>
                 <input type="file" id="passport-image" accept="image/*" required>
-                <label>Selfie with Passport</label>
+                <label>ကိုင်ဆောင်ထားသော် မျက်နာအပါဝင် မှတ်ပုံတင်သို့ pp</label>
                 <input type="file" id="selfie-image" accept="image/*" required>
-                <button id="submit-passport-btn">Submit</button>
+                <button id="submit-passport-btn">တင်ပြရန်</button>
             </div>
             <div id="passport-submitted" class="passport-submitted hidden">
                 <h3>Submitted</h3>
@@ -937,7 +937,7 @@
 
     <!-- Game Section -->
     <div id="game" class="container">
-        <h2>Play Game</h2>
+        <h2>ခြောက်ကောင်ဂျင်</h2>
         <div class="game-container">
             <iframe id="game-iframe" src="https://thai-fish-prawn-crab.netlify.app/" title="Thai Fish Prawn Crab"></iframe>
         </div>
