--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>OPPER Payment</title>
+    <title>🅾PPER🅿YMENT</title>
     <style>
         * {
             margin: 0;
@@ -903,11 +903,11 @@
 
     <!-- Menu Bar -->
     <div class="menu">
-        <button onclick="showSection('wallet')" id="wallet-btn"><img src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png" alt="Home">Wallet</button>
-        <button onclick="showSection('host')" id="host-btn"><img src="https://cdn-icons-png.flaticon.com/512/2099/2099058.png" alt="Host">History</button>
+        <button onclick="showSection('wallet')" id="wallet-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/wallet.png" alt="Home">Wallet</button>
+        <button onclick="showSection('host')" id="host-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/history.png" alt="Host">History</button>
         <button onclick="showSection('game')" id="game-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/game-icon.png" alt="Game">Game</button>
         <button onclick="openTelegram()" id="telegram-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/telegram-icon.png" alt="Telegram">Telegram</button>
-        <button onclick="showSection('mi')" id="mi-btn"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="MI">Profile</button>
+        <button onclick="showSection('mi')" id="mi-btn"><img src="https://github.com/Opper125/opper-payment/raw/main/mi.png" alt="MI">Profile</button>
     </div>
 
     <!-- Audio Elements -->
