--- a/public/index.html
+++ b/public/index.html
@@ -912,7 +912,7 @@
 
     <!-- Audio Elements -->
     <audio id="intro-sound" preload="auto">
-        <source src="https://cdn.pixabay.com/audio/2023/03/22/14-16-48-141_140bpm.mp3" type="audio/mpeg">
+        <source src="https://raw.githubusercontent.com/Opper125/opper-payment/main/intro-soung.mp3" type="audio/mpeg">
     </audio>
     <audio id="transfer-sent-sound" preload="auto">
         <source src="https://raw.githubusercontent.com/Opper125/opper-payment/main/transfer_sent.mp3" type="audio/mpeg">
