--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>🅾PPER🅿YMENT</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Inter:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Intro Animation -->
@@ -141,7 +141,8 @@
         <div class="receipt-content">
             <div class="ticket-container" id="ticket-content"></div>
             <div class="action-buttons">
-                <button class="download-btn" onclick="downloadReceipt()">Download Photo</button>
+                <button class="download-btn" onclick="downloadReceipt()">Download Receipt</button>
+                <button class="print-btn" onclick="printReceipt()">Print Receipt</button>
                 <button class="close-btn" onclick="closeReceipt()">Close</button>
             </div>
         </div>
